syntax = "proto3";

package scooter;
option go_package = "github.com/bgicyfire/02360351-Distributed-Systems-HW2/src/server/scooter";

service ScooterService {
  rpc GetScooterStatus (ScooterRequest) returns (ScooterResponse);
}

message ScooterRequest {
  string scooter_id = 1;
}

message ScooterResponse {
  string status = 1;
  string hostname = 2;
}
